# Finite_state_tool

./: CMakeLists.txt  Dictionary.cpp  Dictionary.h  FiniteStateAutomation.hpp  Queue.hpp  README.md  REAME.md  Set.hpp  String.hpp  main.cpp
Automation_base/: AutomationBase.cpp  AutomationBase.h
Collections/: Dictionary.cpp  Dictionary.h  DynamicArray.hpp  Queue.hpp  Set.hpp
CommandShell/: CommandShell.hpp  test.hpp
Environment/: AFL_Environment.cpp  AFL_Environment.h  Environment.cpp  Environment.h
Example_config_files/: cfg_config1.afl  cfg_config2.afl  fsa_config.afl  npda_config.afl
FSA/: FiniteStateAutomation.cpp  FiniteStateAutomation.h
FstDispatcher/: main.cpp
MinimalAcyclicSubsequentialTransducer/: CMakeLists.txt  FilesUtills.h  Source.cpp
MinimalAcyclicSubsequentialTransducer/AcyclicSubsequentialTransducer/: SubsequentialTransducer.cpp  SubsequentialTransducer.h
MinimalAcyclicSubsequentialTransducer/Builder/: MinimalSubsequentialTransducerBuilder.cpp  MinimalSubsequentialTransducerBuilder.h
MinimalAcyclicSubsequentialTransducer/exam/: add.txt  delete.txt
MinimalAcyclicSubsequentialTransducer/tests/: t10_remove.txt  t10_start.txt  t11_result.txt  t11_start.txt  t12_remove.txt  t12_result.txt  t12_start.txt  t13_result.txt  t13_start.txt  t1_remove.txt  t1_result.txt  t1_start.txt  t2_remove.txt  t2_result.txt  t2_start.txt  t3_result.txt  t3_start.txt  t4_result.txt  t4_start.txt  t5_remove.txt  t5_result.txt  t5_start.txt  t6_remove.txt  t6_result.txt  t7_remove.txt  t7_result.txt  t7_start.txt  t8_result.txt  t8_start.txt  t9_result.txt  t9_start.txt
MinimalAcyclicSubsequentialTransducer/tests2/: t1_add.txt  t1_result.txt  t2_add.txt  t2_start.txt  t3_add.txt  t3_result.txt  t3_start.txt  t4_add.txt  t4_result.txt  t4_start.txt  t5_add.txt  t5_result.txt  t5_start.txt  t6_add.txt  t6_result.txt  t7_add.txt  t7_result.txt  t7_start.txt  t8_add.txt  t8_result.txt  t8_start.txt
(+105 files in other folders)
